Fixed: Prouct widget calculation of visible items

--- a/apparelrow/static/less/external-product.less
+++ b/apparelrow/static/less/external-product.less
@@ -65,12 +65,12 @@
 
         li.product {
             float: left;
-            padding: 0px 10px;
             box-sizing: border-box;
         }
         li img {
             width: 100%;
             height:100%;
+            max-width: 100%;
             vertical-align: middle;
             opacity: 1;
             transition: opacity 0.5s;
@@ -90,13 +90,13 @@
         position: absolute;
         display: block;
         z-index: 10;
-        height: 44px;
-        width: 44px;
+        height: 30px;
+        width: 30px;
         transition: background-color .2s ease-in-out;
         text-align: center;
         top: 50%;
         margin-top: -30px;
-        right: 30px;
+        right: 0;
 
         &::before {
             content: "";
@@ -123,7 +123,7 @@
         }
 
         &.previous  {
-            left: 30px;
+            left: 0;
 
             &::before {
                 -ms-transform: rotate(135deg);
